# BeeftextLinuxMac

./: .gitignore  BUILDING.md  CMakeCache.txt  Makefile  README.md  cmake_install.cmake
Beeftext/: BeeftextGlobals.cpp  BeeftextUtils.cpp  CMakeLists.txt  I18nManager.cpp  InputManager.cpp  InputManager.h  KeyboardMapper.cpp  Makefile  WaveSound.cpp  cmake_install.cmake
Beeftext/Clipboard/: ClipboardManagerDefault.cpp  ClipboardManagerDefault.h
Beeftext/Combo/: ComboEditor.cpp  ComboEditor.h  ComboVariable.cpp
Beeftext/Picker/: PickerWindow.cpp
Beeftext/Preferences/Panes/: PrefPaneAdvanced.cpp  PrefPaneAdvanced.ui  PrefPaneCombos.cpp
Beeftext/Snippet/: KeySnippetFragment.cpp
Submodules/XMiLib/XMiLib/: CMakeLists.txt  Makefile  cmake_install.cmake
Submodules/XMiLib/XMiLib/Scoped/: ScopedClipboardAccess.h  ScopedGlobalMemoryLock.h
Submodules/XMiLib/XMiLib/XMiLib_autogen/: deps  moc_predefs.h
Submodules/XMiLib/XMiLib/XMiLib_autogen/EWIEGA46WW/: moc_SingleInstanceApp.cpp
Submodules/XMiLib/XMiLib/XMiLib_autogen/EYOOYJ6JXS/: moc_DebugLog.cpp  moc_DebugLogFilterProxyModel.cpp  moc_DebugLogWindow.cpp
Submodules/XMiLib/XMiLib/XMiLib_autogen/GG64VXJ7CI/: moc_StringListEditorDialog.cpp
Submodules/XMiLib/XMiLib/XMiLib_autogen/GMPEXUCROX/: moc_ThreadedOperation.cpp  moc_ThreadedOperationDialog.cpp
Submodules/XMiLib/XMiLib/XMiLib_autogen/XCUVXAW7JO/: moc_StyleSheetEditor.cpp
Submodules/XMiLib/XMiLib/XMiLib_autogen/include/: ui_DebugLogWindow.h  ui_StringListEditorDialog.h  ui_StyleSheetEditor.h  ui_ThreadedOperationDialog.h
